--- a/package.json
+++ b/package.json
@@ -26,16 +26,21 @@
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.1.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass": "^5.0.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "postcss-loader": "^5.0.0",
     "pug": "^3.0.0",
     "sass-loader": "^11.0.1",
